--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,13 @@ code {
     monospace;
 }
 
+.text_center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top:50%;
+    font-size: 4rem;
+    font-size: bold;
+    text-align: center;
+}
+
